--- a/server/package.json
+++ b/server/package.json
@@ -7,36 +7,9 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongodb": "^6.7.0",
-    "mongoose": "^8.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-photo-album": "^2.2.2",
-    "react-router-dom": "^6.11.2",
-    "react-scripts": "5.0.1"
+    "mongoose": "^8.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "nodemon index.js"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.3.2"
+    "start": "nodemon index.js"
   }
 }
