--- a/server/vercel.json
+++ b/server/vercel.json
@@ -4,7 +4,7 @@
     "routes": [ {"src": "/(.*)", "dest": "/", "status": 200 }],
     "headers": [
     {
-      "source": "/api/(.*)",
+      "source": "/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
