--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-website",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://localhost:3000",
   "dependencies": {
     "axios": "^1.7.2",
     "cors": "^2.8.5",
